231008 Fix bug on web

--- a/Web/HexRunWebVer.html
+++ b/Web/HexRunWebVer.html
@@ -110,8 +110,8 @@ body {
 }
 		</style>
 		<link id='-gd-engine-icon' rel='icon' type='image/png' href='HexRunWebVer.icon.png' />
-<link rel='apple-touch-icon' href='HexRunWebVer.apple-touch-icon.png'/>
-
+		<link rel='apple-touch-icon' href='HexRunWebVer.apple-touch-icon.png'/>
+		
 	</head>
 	<body>
 		<canvas id="canvas">
@@ -134,7 +134,7 @@ body {
 			</div>
 			<div id="status-notice" class="godot" style="display: none;"></div>
 		</div>
-
+		<script src="coi-serviceworker.min.js"></script>
 		<script src="HexRunWebVer.js"></script>
 		<script>
 const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"HexRunWebVer","experimentalVK":false,"fileSizes":{"HexRunWebVer.pck":205360,"HexRunWebVer.wasm":28972640},"focusCanvas":true,"gdextensionLibs":[]};
