231015 Optimize the button UI

--- a/Web/HexRunWebVer.html
+++ b/Web/HexRunWebVer.html
@@ -111,6 +111,7 @@ body {
 		</style>
 		<link id='-gd-engine-icon' rel='icon' type='image/png' href='HexRunWebVer.icon.png' />
 <link rel='apple-touch-icon' href='HexRunWebVer.apple-touch-icon.png'/>
+<link rel='manifest' href='HexRunWebVer.manifest.json'>
 
 		<script src="coi-serviceworker.min.js"></script>
 	</head>
@@ -138,7 +139,7 @@ body {
 
 		<script src="HexRunWebVer.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"HexRunWebVer","experimentalVK":false,"fileSizes":{"HexRunWebVer.pck":582640,"HexRunWebVer.wasm":28972640},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"HexRunWebVer","experimentalVK":false,"fileSizes":{"HexRunWebVer.pck":2966400,"HexRunWebVer.wasm":2564551},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"HexRunWebVer.service.worker.js"};
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
